# arxiv-routine

./: .gitignore  README.md  arxiv-radar.yaml  default-config.yaml  pyproject.toml
notebooks/: using_arxiv_radar.ipynb
src/arxiv_radar/: __init__.py  arxiv_api.py  cli.py  config.py  filtering.py  report.py  scoring.py  workflow.py
tests/: test_arxiv_api.py  test_cli.py  test_config.py  test_filtering.py  test_report.py  test_scoring.py  test_workflow.py
tests/fixtures/: arxiv_feed.xml
